--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "autoprefixer": "^6.7.7",
+    "bootstrap": "3",
+    "jquery": "^3.2.1",
     "postcss-smart-import": "^0.6.10",
     "precss": "^1.4.0"
   },
@@ -30,10 +32,13 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.0",
     "html-loader": "^0.4.5",
-    "path": "^0.12.7",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
     "pug-html-loader": "^1.1.4",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.3.2",
     "whatwg-fetch": "^2.0.3"
   }
