--- a/package.json
+++ b/package.json
@@ -1,45 +1,24 @@
 {
-  "name": "basic",
+  "name": "webpack_boilerplate",
   "version": "1.0.0",
-  "main": "index.js",
-  "private": "true",
+  "private": true,
   "scripts": {
-    "build": "node_modules/.bin/webpack -w"
-  },
-  "dependencies": {
-    "autoprefixer": "^6.7.7",
-    "bootstrap": "3",
-    "jquery": "^3.2.1",
-    "postcss-smart-import": "^0.6.10",
-    "precss": "^1.4.0"
+    "build": "npx webpack -w --mode=production"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015": "^6.24.0",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-airbnb-base": "^11.1.2",
-    "eslint-plugin-import": "^2.2.0",
-    "exports-loader": "^0.6.4",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.0",
-    "html-loader": "^0.4.5",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.3.3",
-    "pug-html-loader": "^1.1.4",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.2",
-    "whatwg-fetch": "^2.0.3"
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
+    "node-sass": "^4.13.1",
+    "pug-html-loader": "^1.1.5",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.2",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
