--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "ws -d public",
     "build": "npx webpack --mode=production",
-    "watch": "npx webpack -w --mode=production"
+    "watch": "npx webpack -w --mode=development --progress",
+    "stats": "npx webpack -w --mode=production --profile --json > stats.json"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -14,15 +15,17 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-loader": "^4.0.3",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "local-web-server": "^3.0.7",
-    "node-sass": "^4.13.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "4.13.1",
     "pug-html-loader": "^1.1.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10"
   }
 }
