--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "file-loader": "^5.0.2",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.0.0-beta.11",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "4.13.1",
+    "@babel/core": "~7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "~7.8.3",
+    "@babel/preset-env": "~7.8.3",
+    "babel-loader": "~8.0.6",
+    "clean-webpack-plugin": "~3.0.0",
+    "css-loader": "~3.4.2",
+    "file-loader": "~5.0.2",
+    "html-loader": "~0.5.5",
+    "html-webpack-plugin": "~3.2.0",
+    "mini-css-extract-plugin": "~0.9.0",
+    "node-sass": "~4.13.1",
     "pug-html-loader": "^1.1.5",
-    "sass-loader": "^8.0.2",
-    "webpack": "4.41.5",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "^3.10.3"
+    "sass-loader": "~8.0.2",
+    "webpack": "~4.41.5",
+    "webpack-cli": "~3.3.10",
+    "webpack-dev-server": "~3.10.3"
   }
 }
